--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "lint": "./node_modules/.bin/tslint --project .",
-    "tsc": "./node_modules/.bin/tsc"
+    "compile": "./node_modules/.bin/tsc"
   },
   "repository": {
     "type": "git",
