--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "./node_modules/.bin/tslint --project .",
     "ts": "./node_modules/.bin/tsc",
     "pack": "./node_modules/.bin/webpack",
-    "build": "node ./frontend/build.js"
+    "build": "node ./frontend/build.js",
+    "watch": "./node_modules/.bin/watch 'npm run build' ./frontend/src"
   },
   "repository": {
     "type": "git",
@@ -21,9 +22,10 @@
   "homepage": "https://github.com/xenopont/site#readme",
   "dependencies": {},
   "devDependencies": {
-    "tslint": "^5.10.0",
-    "typescript": "^2.8.3",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3"
+    "tslint": "latest",
+    "typescript": "latest",
+    "webpack": "latest",
+    "webpack-cli": "latest",
+    "watch": "latest"
   }
 }
