--- a/frontend/docker/default.conf
+++ b/frontend/docker/default.conf
@@ -5,6 +5,7 @@ server {
     location / {
         root /srv/site/frontend/dist;
         index index.html;
+        try_files $uri $uri/ /index.html;
     }
 
     error_page   500 502 503 504  /50x.html;
