--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,8 @@
     "main": "index.html",
     "scripts": {
         "lint": "node ./node_modules/tslint/bin/tslint --project .",
-        "ts": "node ./node_modules/typescript/bin/tsc",
-        "pack": "node ./node_modules/webpack-cli/bin/cli.js",
-        "build": "node ./build.js",
-        "watch": "node ./node_modules/watch/cli.js 'npm run build' ./src"
+        "build": "node ./node_modules/parcel/bin/cli.js build ./src/index.html",
+        "watch": "node ./node_modules/parcel/bin/cli.js watch ./src/index.html"
     },
     "repository": {
         "type": "git",
@@ -24,8 +22,6 @@
     "devDependencies": {
         "tslint": "latest",
         "typescript": "latest",
-        "webpack": "latest",
-        "webpack-cli": "latest",
-        "watch": "latest"
+        "parcel": "latest"
     }
 }
