windows power shell support, server not starting

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,17 @@
 node_modules
 .DS_Store
 .vs/
+npm-debug.log
+.vscode
+.cache
+
 client/dist/*
 !client/dist/.gitkeep
 client/js-compiled/*
 !client/js-compiled/.gitkeep
-client/src/config/app.ts
-npm-debug.log
-.vscode
-.cache
+
+server/dist/*
+!server/dist/.gitkeep
+
+!database/.gitkeep
+database/*
