--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "web-site-client",
+    "name": "web-site-server",
     "version": "0.0.1",
-    "description": "Website client application",
-    "main": "index.html",
+    "description": "Website server application",
+    "main": "app.ts",
     "scripts": {
         "lint": "node ./node_modules/tslint/bin/tslint --project .",
         "build": "node ./node_modules/parcel/bin/cli.js build ./src/index.html",
@@ -19,10 +19,13 @@
         "url": "https://github.com/xenopont/site/issues"
     },
     "homepage": "https://github.com/xenopont/site#readme",
-    "dependencies": {},
+    "dependencies": {
+        "express": "4.17.1"
+    },
     "devDependencies": {
         "tslint": "latest",
         "typescript": "latest",
-        "parcel": "latest"
+        "nodemon": "latest",
+        "@types/node": "latest"
     }
 }
