--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,6 +6,11 @@
         "outDir": "./dist",
         "rootDir": "./src",
         "strict": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "experimentalDecorators": true,
+        "moduleResolution": "Node",
+        "importHelpers": true,
+        "types": [ "node" ],
+        "typeRoots": [ "node_modules/@types" ]
     }
 }
