nginx default server fixes

--- a/docker/dev-client.nginx.conf
+++ b/docker/dev-client.nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen       80;
-    server_name  site.front;
+    server_name  _;
 
     location / {
         root /srv/site/client/dist;
