nginx path fixed

--- a/docker/dev-client.nginx.conf
+++ b/docker/dev-client.nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name  _;
 
     location / {
-        root /srv/site/client/dist;
+        root /srv/client/dist;
         index index.html;
         try_files $uri $uri/ /index.html;
     }
