--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -2,10 +2,11 @@
     "compilerOptions": {
         "target": "esnext",
         "module": "esnext",
-        "sourceMap": false,
-        "outDir": "./js-compiled",
+        "sourceMap": true,
+        "outDir": "./dist",
         "rootDir": "./src",
         "strict": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "experimentalDecorators": true
     }
 }
