--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "build": "node ./node_modules/.bin/tsc",
         "dev": "node ./node_modules/.bin/nodemon",
-        "lint": "node ./node_modules/tslint/bin/tslint --project ."
+        "lint": "node ./node_modules/.bin/eslint ./src/**.ts ./test/**.ts",
+        "test": "node ./node_modules/.bin/mocha --reporter spec --recursive ./test/**/*.test.ts"
     },
     "repository": {
         "type": "git",
@@ -19,13 +20,21 @@
     },
     "homepage": "https://github.com/xenopont/site#readme",
     "dependencies": {
-        "express": "4.17.1"
+        "express": "4.17.1",
+        "mongodb": "3.5.6"
     },
     "devDependencies": {
         "@types/express": "latest",
+        "@types/mocha": "latest",
+        "@types/mongodb": "latest",
         "@types/node": "latest",
+        "@types/sinon": "latest",
+        "@typescript-eslint/parser": "latest",
+        "eslint": "latest",
+        "mocha": "latest",
         "nodemon": "latest",
-        "tslint": "latest",
+        "should": "latest",
+        "sinon": "latest",
         "ts-node": "latest",
         "typescript": "latest"
     }
