--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,7 +10,7 @@
         "experimentalDecorators": true,
         "moduleResolution": "Node",
         "importHelpers": true,
-        "types": [ "node" ],
+        "types": [ "node", "mocha" ],
         "typeRoots": [ "node_modules/@types" ]
     }
 }
