--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
     "main": "app.ts",
     "scripts": {
         "build": "node ./node_modules/.bin/tsc",
-        "dev": "node ./node_modules/.bin/nodemon",
+        "watch": "node ./node_modules/.bin/nodemon",
         "lint": "node ./node_modules/.bin/eslint ./src/**.ts ./test/**.ts",
         "test": "node ./node_modules/.bin/mocha --reporter spec --recursive ./test/**/*.test.ts"
     },
@@ -21,7 +21,7 @@
     "homepage": "https://github.com/xenopont/site#readme",
     "dependencies": {
         "express": "4.17.1",
-        "mongodb": "3.5.6"
+        "mongodb": "3.6.3"
     },
     "devDependencies": {
         "@types/express": "latest",
